# flutter_3d_engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts  gradle.properties  settings.gradle.kts
example/android/app/: build.gradle.kts
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: flutter_rust_3d.dart  main.dart
lib/src/: rust_3d_canvas.dart  rust_3d_controller.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  (+1 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  shader.wgsl  water.wgsl
rust/src/api/: simple.rs
rust/src/core/: fluid.rs  math.rs  mod.rs  present.rs  renderer.rs  renderer_gpu.rs  scene.rs  water.rs  water_mesh.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flutter_3d_engine.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_flutter_3d_engine.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+10 files in other folders)
