[package]
name = "rust_lib_flutter_3d_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
wgpu = "30"
pollster = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
once_cell = "1.21"
glam = { version = "0.29", features = ["bytemuck"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
